<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Refine">


    <TextView
        android:id="@+id/tvAvailability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/select_your_availability"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAvailability">

        <AutoCompleteTextView
            android:id="@+id/actv_availability"
            android:layout_width="match_parent"
            android:textColor="@color/blue"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/available_hey_let_us_connect" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvAddStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/add_your_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="30dp"
        app:counterEnabled="true"
        app:counterMaxLength="250"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddStatus">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStatus"
            android:textColor="@color/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emoji"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvHyperLocalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/select_hyper_local_distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <com.google.android.material.slider.Slider

        app:thumbColor="@color/blue"
        app:labelStyle="@style/customToolTip"
        app:trackColorActive="@color/blue"
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:stepSize="1"
        android:value="50"
        android:valueFrom="1"
        android:valueTo="100"
        app:labelBehavior="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHyperLocalDistance"
        app:tickVisible="false" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="1 Km"
        android:layout_marginTop="40dp"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/tvSelectPurpose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/slider" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="100 Km"
        android:layout_marginTop="40dp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/slider"
        app:layout_constraintBottom_toTopOf="@+id/tvSelectPurpose"/>
    <TextView
        android:id="@+id/tvSelectPurpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/select_purpose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectPurpose">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip"
            android:text="Coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            android:text="Business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            android:text="Hobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            android:text="Friendship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup1">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            android:text="Movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            android:text="Dinning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            android:text="Dating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            android:text="Matrimony"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle" />
    </com.google.android.material.chip.ChipGroup>

    <Button
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_amp_explore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup2"
        android:backgroundTint="@color/blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>
